# CMAKE

./: README.txt
HelloWorld/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kconfig_fragment.txt
IMACROS/1/: macros.h  readme
IMACROS/2/: CMakeLists.txt  main.c  readme
IMACROS/2/cmake/: compiler.cmake
MyApp/: CMakeLists.txt
MyApp/src/: main.cpp
MyProject/: CMakeLists.txt  README
MyProject/cmake/: MyLibraryConfig.cmake.in
MyProject/include/MyLibrary/: MyLibrary.h
MyProject/install/include/MyLibrary_ext/: MyLibrary_ext.h
MyProject/install/lib/cmake/MyLibrary/: MyLibraryTargets-noconfig.cmake  MyLibraryTargets.cmake
MyProject/src/: MyLibrary.cpp  MyLibrary_ext.cpp
TARGET_PROPERTY/: CMakeLists.txt
TARGET_PROPERTY/a/: a.h
TARGET_PROPERTY/include/: my_library.h
TARGET_PROPERTY/src/: a.cpp  main.cpp  my_library.cpp
add_custom_command/: CMakeLists.txt
add_custom_target/: CMakeLists.txt
array/: CMakeLists.txt
compile_langage/: CMakeLists.txt  main.c  main.cpp
example1/: CMakeLists.txt  README.txt  foo.cc  main.cc
example1/include/: foo.h
example2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cc
example2/include/: TutorialConfig.h
example3/: CMakeLists.txt
example3/lib/: CMakeLists.txt  shape.cpp
example4/: main.cpp
example4/lib/: CMakeLists.txt  shape.cpp
example5/: CMakeLists.txt
example5/include/: shape.h
example5/lib/: CMakeLists.txt  shape.cpp
excute_process/01/: CMakeLists.txt  config.ini  script.py
excute_process/02/: CMakeLists.txt  product.yml  products.py
generator_expression/: CMakeLists.txt
generator_expression/include/: my_header.h
generator_expression/src/: main.cpp  my_header.cpp
install_directory/: CMakeLists.txt  readme
parse_str/: CMakeLists.txt
static_add_library/: CMakeLists.txt  readme
static_add_library/cmake/: lupaConfig.cmake.in
static_add_library/include/: some_header.h
static_add_library/src/: file1.cpp  file2.cpp  file3.cpp
target_compile_option/: CMakeLists.txt  main.cpp
